Version 7    2013-May-29

--Fixed crash in edit-screen suicide when family members have no paths to exit
  (thanks Seth Archambault).

--Fixed visual glitch in blueprints (some pixels in bottom row not being
  shadowed properly).

--Fixed bug in movement acceleration, which is meant only for panning
  (in blueprints and when paused during playback), affecting robber movement.

--Improved legibility of blueprints by adding inner shading to walls, pits,
  and trapdoors.

--Improved legibility of doors on blueprints by adding knobs.

--Panning around a blueprint during robbery now counts as activity, preventing
  the robbery checkout from becoming stale (thanks Seth Archambault).

--Fixed so that wife runs to a killed child even if she hasn't see the robber
  yet.

--Mouse-over in blueprints now shows tool tips for damaged objects 
  (thanks Zed).

--Uninteresting houses in the list can now be ignored (Ignore House button) until they change (thanks Zed).




Version 6   2013-May-24

--Fixed so that tools with reach cannot be used through unbroken windows
  (thanks Buddy Gorven).

--Changed house menus to remember page position and search string (so you
  don't have to scroll through the high-value houses over and over to get to
  your houses of interest).  Less clicking, less server load (thanks Michael 
  Weber).

--Fixed so that suicide on doorstep (first move) shows up on tape.

--After login fails, client now re-asks reflector for server URL, in case user
  types different email second time that should bounce them to a different
  server (thanks Martijn van der Ven).

--Fixed bug that caused %s to replace family names after death (thanks Stan
  Volchenok).

--Fixed memory leak in robbery checkout.

--Fixed wife path return behavior after child death (she used to return to the
  point from which she started searching for her dead child, and now she
  returns to her original location).

--Fixed bug where family blocked in by other dead family members do not die